# tarot_yolo

./: .gitignore  Dockerfile  README.md  pyproject.toml
tarot_yolo/: __main__.py  llm_test.py  main.py  model_export.py  openai_test.py
